Development Portal (2022-03-22 shi)
==============================
Update Freetext glossary in search
Update view_search glossary chunk now in general
Display all narratives for result titles & indicator descriptions
Fix result comments to only show when available
Fix result percent dot background color when @percent is 0
Update print-friendly theme for SAVi


Development Portal (2022-03-10 shi)
==============================
Update search input font size


Development Portal (2022-02-01 shi)
==============================
Add validator links to SAVi and Org file


Development Portal (2021-12-22 shi)
==============================
Change SAVi urls 


Development Portal (2021-12-07 shi)
==============================
Add sector vocab 12 to SAVi
Fix period column font size for results
Display sector vocab code


Development Portal (2021-12-02 shi)
==============================
Update pid url for SAVi org files


Development Portal (2021-11-23 shi)
==============================
Fix typo for id links in participating-org SAVi


Development Portal (2021-11-14 shi)
==============================
Fix budget end date column width in SAVi
Fix Dash snapshots table text wrapping


Development Portal (2021-09-24 shi)
==============================
Update print-friendly css
Remove sorting for result tables


Development Portal (2021-09-23 shi)
==============================
Fix css for participating-org id alignment
Display comments for results data
Update facet value type css
Update facet separator
Update result comment layout into tabs
Update SAVi css


Development Portal (2021-08-07 shi)
==============================
Update reference column for participating-org in SAVi
Update hover titles for participating-org reference, crs and activity-id
Update hover titles for transaction provider/receiver activity-id


Development Portal (2021-08-02 shi)
==============================
Update activity list column names to Total Commitment