@@ -778,7 +778,7 @@
 	<td colspan="5">
 		<div class="result_comment_wrap">
 			<div class="result_comment_type"><b>Baseline</b> comment</div>
-			<div class="result_comment">{_it./baseline/comment/narrative.0.text||}</div>
+			<div class="result_comment">{_it./baseline/comment/narrative:/narrative||}</div>
 		</div>
 	</td>
 </tr>
@@ -788,7 +788,7 @@
 	<td colspan="5">
 		<div class="result_comment_wrap">
 			<div class="result_comment_type"><b>Target</b> comment</div>
-			<div class="result_comment">{_it./target/comment/narrative.0.text||}</div>
+			<div class="result_comment">{_it./target/comment/narrative:/narrative||}</div>
 		</div>
 	</td>
 </tr>
@@ -798,7 +798,7 @@
 	<td colspan="5">
 		<div class="result_comment_wrap">
 			<div class="result_comment_type"><b>Actual</b> comment</div>
-			<div class="result_comment">{_it./actual/comment/narrative.0.text||}</div>
+			<div class="result_comment">{_it./actual/comment/narrative:/narrative||}</div>
 		</div>
 	</td>
 </tr>
