@@ -1,3 +1,8 @@
+Development Portal (2022-03-23 shi)
+==============================
+Display all narratives for result comments in SAVi
+
+
 Development Portal (2022-03-22 shi)
 ==============================
 Update Freetext glossary in search
